title and tag name alignment fix

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -96,6 +96,9 @@ a:focus {
 }
 
 .top-bar .logo img {
+    position: fixed;
+    top: 30px;
+    left: 17px;
     max-width: 100%;
     max-height: 60px;
 }
